# CONSILIUM

./: .env.example  .gitignore  BUILD_LOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  jac.toml  pyproject.toml
demo/: generate_traces.py
demo/traces/: case_b.json  case_c.json
eval/: audit_harness.py  baseline_single_prompt.py  consilium_benchmark.py  final_benchmark.py  quick_benchmark.py
eval/results/: baseline_20260516T051759Z.json  quick_20260517T182220Z.json  quick_20260518T051304Z.json  quick_20260518T054931Z.json  quick_20260518T083057Z.json  quick_20260518T111256Z.json  triage_benchmark_summary.md  triage_rebenchmark_summary.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BenchmarkView.tsx  CaseCard.tsx  CrossExamPanel.tsx  DevilsAdvocatePanel.tsx  FinalDifferential.tsx  Header.tsx  PlaybackControls.tsx  SpecialistCard.tsx  (+2 more)
scripts/: byllm_override_check.jac  download_datasets.py  smoke_test.py  validate_phase0.py
smoke_test_results/: cross_exam_smoke.md  triage_vignettes.md
src/: consilium.jac  consilium_benchmark_runner.jac  cross_examination.jac  demo_trace_runner.jac  devils_advocate.jac  dry_run.jac  dry_run_configB.jac  ingest.jac  json_loader.py  json_utils.py  labels.py  models.jac  moderator.jac  prompts.jac  schema.jac  sleep.py  smoke_test_triage.py  sorter.py  triage_walker.jac
src/specialists/: cardiology.jac  endocrinology.jac  gastroenterology.jac  infectious_disease.jac  neurology.jac  psychiatry.jac  rheumatology.jac
(+10 files in other folders)
